--- a/package.json
+++ b/package.json
@@ -1,16 +1,55 @@
 {
-  "name": "@clue/mono",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Nikita Fedorov",
-  "workspaces": [
-    "benchmark",
-    "packages/*",
-    "docs",
-    "test"
-  ]
+	"name": "@clue/mono",
+	"version": "0.0.1",
+	"private": false,
+	"scripts": {
+		"dev": "vite dev",
+		"preview": "vite preview",
+		"package": "svelte-kit sync && svelte-package && publint",
+		"prepublishOnly": "npm run package",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"test": "vitest",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write .",
+		"build": "vite build && npm run package && npm run build:styles",
+		"build:styles": "node scripts/buildStyles.mjs"
+	},
+	"author": "Nikita Fedorov",
+	"files": [
+		"dist",
+		"!dist/**/*.test.*",
+		"!dist/**/*.spec.*"
+	],
+	"peerDependencies": {
+		"svelte": "^4.0.0"
+	},
+	"dependencies": {
+		"@clue/base": "./src/lib/packages/base",
+		"@clue/styles": "./src/lib/packages/styles",
+		"@clue/template": "./src/lib/packages/template",
+		"@clue/utils": "./src/lib/packages/utils"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/kit": "^1.20.4",
+		"@sveltejs/package": "^2.0.0",
+		"@typescript-eslint/eslint-plugin": "^5.45.0",
+		"@typescript-eslint/parser": "^5.45.0",
+		"eslint": "^8.28.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-svelte": "^2.30.0",
+		"glob": "^10.3.4",
+		"prettier": "^2.8.0",
+		"prettier-plugin-svelte": "^2.10.1",
+		"publint": "^0.1.9",
+		"sass": "^1.66.1",
+		"svelte": "^4.0.5",
+		"svelte-check": "^3.4.3",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^4.4.2",
+		"vitest": "^0.34.0"
+	},
+	"type": "module"
 }
