--- a/src/lib/packages/base/package.json
+++ b/src/lib/packages/base/package.json
@@ -9,6 +9,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "@clue/utils": "../utils"
+  },
   "author": "Nikita Fedorov",
   "workspaces": [
     "benchmark",
