--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	},
 	"dependencies": {
 		"@clue/base": "./src/lib/packages/base",
+		"@clue/icons": "./src/lib/packages/icons",
 		"@clue/styles": "./src/lib/packages/styles",
 		"@clue/utils": "./src/lib/packages/utils"
 	},
@@ -48,6 +49,7 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
+		"vite-plugin-svg-sprite": "^0.5.0",
 		"vitest": "^0.34.0"
 	},
 	"type": "module"
