--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"test": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"build": "vite build && npm run package && npm run build:styles",
+		"build:icons": "npx ts-node --esm scripts/beforeBuild/createIcons.ts",
+		"build": "build:icons vite build && npm run package && npm run build:styles",
 		"build:styles": "node scripts/buildStyles.mjs"
 	},
 	"author": "Nikita Fedorov",
@@ -34,6 +35,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"@sveltejs/package": "^2.0.0",
+		"@types/node": "^20.7.1",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.28.0",
@@ -46,6 +48,7 @@
 		"sass": "^1.66.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
