--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,11 @@
 		"forceConsistentCasingInFileNames": true,
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
+		"skipDefaultLibCheck": true,
+		"declaration": true,
 		"sourceMap": true,
 		"strict": true,
 		"moduleResolution": "NodeNext",
-	}
+	},
+	"include": ["./scripts/**/*.ts"]
 }
