--- a/src/lib/packages/icons/package.json
+++ b/src/lib/packages/icons/package.json
@@ -6,6 +6,9 @@
   "main": "src/index.js",
   "type": "module",
   "author": "Nikita Fedorov",
+  "dependencies": {
+    "vite-plugin-svg-sprite": "^0.5.0"
+  },
   "exports": {
     ".": "./src/index.js",
     "./plugin": "./src/plugin/index.js",
