--- a/src/lib/packages/icons/package.json
+++ b/src/lib/packages/icons/package.json
@@ -12,7 +12,13 @@
   "exports": {
     ".": "./src/index.js",
     "./plugin": "./src/plugin/index.js",
-    "./test": "./src/icons/test.js",
-    "./line": "./src/icons/line.js"
+    "./test/*": {
+      "import": "./src/assets/test/*",
+      "types": "./svg/types/module.d.ts"
+    },
+    "./line/*": {
+      "import": "./src/assets/line/*",
+      "types": "./svg/types/module.d.ts"
+    }
   }
 }
