feat: add rename function => toLowerCase

--- a/src/lib/packages/icons/package.json
+++ b/src/lib/packages/icons/package.json
@@ -16,6 +16,14 @@
     ".//*": {
       "import": "./src/assets//*",
       "types": "./svg/types/module.d.ts"
+    },
+    "./line/*": {
+      "import": "./src/assets/line/*",
+      "types": "./svg/types/module.d.ts"
+    },
+    "./filled/*": {
+      "import": "./src/assets/filled/*",
+      "types": "./svg/types/module.d.ts"
     }
   }
 }
