--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"sass": "^1.66.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"svelte-virtual-scroll-list": "^1.3.0",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
