--- a/src/lib/packages/base/package.json
+++ b/src/lib/packages/base/package.json
@@ -6,17 +6,12 @@
   "license": "MIT",
   "main": "src/index.js",
   "type": "module",
+  "author": "Nikita Fedorov",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@clue/utils": "../utils"
-  },
-  "author": "Nikita Fedorov",
-  "workspaces": [
-    "benchmark",
-    "packages/*",
-    "docs",
-    "test"
-  ]
+		"@clue/icons": "../icons",
+		"@clue/utils": "../utils"
+	}
 }
