--- a/src/lib/packages/icons/package.json
+++ b/src/lib/packages/icons/package.json
@@ -6,10 +6,13 @@
   "main": "src/index.js",
   "type": "module",
   "author": "Nikita Fedorov",
-  "dependencies": {
+  "devDependencies": {
     "vite-plugin-svg-sprite": "^0.5.0"
   },
-  "types": "./src/types/index.ts",
+  "dependencies": {
+		"@clue/config": "../config",
+		"@clue/utils": "../utils"
+	},
   "exports": {
     ".": "./src/index.js",
     "./plugin": "./src/plugin/index.js",
