--- a/src/lib/packages/popover/package.json
+++ b/src/lib/packages/popover/package.json
@@ -5,5 +5,9 @@
 	"license": "MIT",
 	"main": "src/index.js",
 	"type": "module",
-	"author": "Nikita Fedorov"
+	"author": "Nikita Fedorov",
+	"dependencies": {
+		"@clue/config": "../config",
+		"@clue/utils": "../utils"
+	}
 }
