--- a/src/lib/packages/styles/package.json
+++ b/src/lib/packages/styles/package.json
@@ -8,11 +8,5 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Nikita Fedorov",
-  "workspaces": [
-    "benchmark",
-    "packages/*",
-    "docs",
-    "test"
-  ]
+  "author": "Nikita Fedorov"
 }
