--- a/src/lib/packages/utils/package.json
+++ b/src/lib/packages/utils/package.json
@@ -10,10 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nikita Fedorov",
-  "workspaces": [
-    "benchmark",
-    "packages/*",
-    "docs",
-    "test"
-  ]
+  "dependencies": {
+		"@clue/config": "../config"
+	}
 }
