feat: update build

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"build:styles": "node scripts/afterBuild/buildStyles.mjs",
 		"build:before": "npm run build:icons",
 		"build:after": "npm run build:styles",
-		"build": " npm run build:before && vite build && npm run package && npm run build:after"
+		"build": " npm run build:before && npm run package && npm run build:after",
+		"build:site": " npm run build:before && vite build"
 	},
 	"author": "Nikita Fedorov",
 	"files": [
