--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
 		"build:styles": "node scripts/afterBuild/buildStyles.mjs",
 		"build:before": "npm run build:icons",
 		"build:after": "npm run build:styles",
-		"build": " npm run build:before && npm run package && vite build && npm run build:after",
-		"build:site": " svelte-kit sync && vite build"
+		"build": "npm run build:before && npm run package && vite build && npm run build:after",
+		"build:site": "npm run build:before && npm run package && vite build && npm run build:after"
 	},
 	"author": "Nikita Fedorov",
 	"files": [
