--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"build:before": "npm run build:icons",
 		"build:after": "npm run build:styles",
 		"build": "npm run build:before && npm run package && vite build && npm run build:after",
-		"build:site": "npm run build:before && npm run package && vite build && npm run build:after"
+		"build:site": "svelte-kit sync && npm run build:before && vite build"
 	},
 	"author": "Nikita Fedorov",
 	"files": [
