--- a/src/lib/packages/forms/package.json
+++ b/src/lib/packages/forms/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@clue/forms",
+	"name": "@cluue/forms",
 	"version": "1.0.0",
 	"private": false,
 	"license": "MIT",
@@ -7,10 +7,10 @@
 	"type": "module",
 	"author": "Nikita Fedorov",
 	"dependencies": {
-		"@clue/icons": "workspace:*",
-		"@clue/config": "workspace:*",
-		"@clue/base": "workspace:*",
-		"@clue/utils": "workspace:*",
-		"@clue/popover": "workspace:*"
+		"@cluue/icons": "workspace:*",
+		"@cluue/config": "workspace:*",
+		"@cluue/base": "workspace:*",
+		"@cluue/utils": "workspace:*",
+		"@cluue/popover": "workspace:*"
 	}
 }
