--- a/src/lib/packages/icons/package.json
+++ b/src/lib/packages/icons/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@clue/icons",
+  "name": "@cluue/icons",
   "version": "1.0.0",
   "private": false,
   "license": "MIT",
@@ -10,8 +10,8 @@
     "vite-plugin-svg-sprite": "^0.5.0"
   },
   "dependencies": {
-    "@clue/config": "workspace:*",
-    "@clue/utils": "workspace:*"
+    "@cluue/config": "workspace:*",
+    "@cluue/utils": "workspace:*"
   },
   "exports": {
     ".": "./src/index.js",
