--- a/src/lib/packages/base/package.json
+++ b/src/lib/packages/base/package.json
@@ -13,5 +13,12 @@
   "dependencies": {
 		"@cluue/icons": "workspace:*",
 		"@cluue/utils": "workspace:*"
-	}
+	},
+  "exports": {
+    ".": {
+      "import": "./src/index.js",
+      "default": "./src/index.js",
+      "types": "./src/index.d.ts"
+    }
+  }
 }
