--- a/distTemplates/package.json
+++ b/distTemplates/package.json
@@ -3,28 +3,9 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
-		"preview": "vite preview",
-		"package": "svelte-kit sync && svelte-package && publint",
-		"prepublishOnly": "npm run package",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"test": "vitest",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write .",
-		"build:icons": "npx ts-node --esm scripts/beforeBuildAndDev/createIcons.ts",
-		"build:styles": "node scripts/afterBuild/buildStyles.mjs",
-		"build:before": "npm run build:icons",
-		"build:after": "npm run build:styles",
-		"build": "npm run build:before && npm run package && vite build && npm run build:after",
-		"build:site": "svelte-kit sync && npm run build:before && vite build"
+		"publish": "echo test"
 	},
 	"author": "Nikita Fedorov",
-	"files": [
-		"dist",
-		"!dist/**/*.test.*",
-		"!dist/**/*.spec.*"
-	],
 	"peerDependencies": {
 		"svelte": "^4.0.0"
 	},
