--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"preview": "vite preview",
 		"prepublish": "npx changeset && npx changeset version && npm run build",
 		"publish": "npx changeset && npx changeset version && npm run build",
-		"package": "svelte-kit sync && svelte-package && publint",
+		"package": "svelte-kit sync && svelte-package",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
