--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "vite dev",
 		"preview": "vite preview",
 		"prepublish": "npx changeset && npx changeset version && npm run build",
-		"publish": "pnpm run -r --filter @cluue/mono publish",
+		"publish": "npm run prepublish && pnpm run -r --filter @cluue/mono publish",
 		"package": "svelte-kit sync && svelte-package",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
