--- a/src/lib/packages/base/package.json
+++ b/src/lib/packages/base/package.json
@@ -5,6 +5,7 @@
   "private": false,
   "license": "MIT",
   "main": "src/index.js",
+  "types": "src/index.d.ts",
   "type": "module",
   "author": "Nikita Fedorov",
   "scripts": {
@@ -17,7 +18,7 @@
   "exports": {
     ".": {
       "import": "./src/index.js",
-      "default": "./src/index.js",
+      "svelte": "./src/index.js",
       "types": "./src/index.d.ts"
     }
   }
