--- a/src/lib/packages/popover/package.json
+++ b/src/lib/packages/popover/package.json
@@ -4,6 +4,7 @@
 	"private": false,
 	"license": "MIT",
 	"main": "src/index.js",
+	"types": "src/index.d.ts",
 	"type": "module",
 	"author": "Nikita Fedorov",
 	"dependencies": {
@@ -14,7 +15,7 @@
 	"exports": {
 		".": {
 			"import": "./src/index.js",
-			"default": "./src/index.js",
+			"svelte": "./src/index.js",
 			"types": "./src/index.d.ts"
 		}
 	}
