--- a/src/lib/packages/config/package.json
+++ b/src/lib/packages/config/package.json
@@ -6,5 +6,12 @@
 	"main": "src/index.js",
 	"types": "src/index.d.ts",
 	"type": "module",
-	"author": "Nikita Fedorov"
+	"author": "Nikita Fedorov",
+	"exports": {
+		".": {
+			"import": "./src/index.js",
+			"types": "./src/index.d.ts",
+			"svelte": "./src/index.js"
+		}
+	}
 }
