--- a/src/lib/packages/utils/package.json
+++ b/src/lib/packages/utils/package.json
@@ -5,6 +5,7 @@
   "private": false,
   "license": "MIT",
   "main": "src/index.js",
+  "types": "src/index.d.ts",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,7 +17,7 @@
   "exports": {
     ".": {
       "import": "./src/index.js",
-      "default": "./src/index.js",
+      "svelte": "./src/index.js",
       "types": "./src/index.d.ts"
     }
   }
