--- a/src/lib/packages/icons/package.json
+++ b/src/lib/packages/icons/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@cluue/icons",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "private": false,
   "license": "MIT",
   "main": "src/index.js",
-  "types": "src/index.d.ts",
+  "types": "desc.d.ts",
   "type": "module",
   "author": "Nikita Fedorov",
   "peerDependencies": {
