--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
 		"skipLibCheck": true,
 		"skipDefaultLibCheck": true,
 		"declaration": true,
-		"declarationMap": true,
 		"sourceMap": true,
-		"strict": true
+		"strict": true,
 	}
 }
