--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
+		"test": "jest",
 		"build:icons": "npx ts-node --esm scripts/beforeBuildAndDev/createIcons.ts",
 		"build:styles": "node scripts/afterBuild/buildStyles.mjs",
 		"build:packageTemplates": "node scripts/afterBuild/packageTemplates.mjs",
@@ -31,6 +32,9 @@
 	},
 	"dependencies": {
 		"@cluue/base": "workspace:*",
+		"@cluue/calendar": "workspace:*",
+		"@cluue/calendar-core": "workspace:*",
+		"@cluue/calendar-utils": "workspace:*",
 		"@cluue/config": "workspace:*",
 		"@cluue/forms": "workspace:*",
 		"@cluue/icons": "workspace:*",
@@ -45,6 +49,7 @@
 		"@sveltejs/adapter-netlify": "^2.0.8",
 		"@sveltejs/kit": "^1.26.0",
 		"@sveltejs/package": "^2.2.2",
+		"@types/jest": "^29.5.8",
 		"@types/node": "^20.8.7",
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
 		"@typescript-eslint/parser": "^5.62.0",
@@ -54,6 +59,7 @@
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-svelte": "^2.34.0",
 		"glob": "^10.3.10",
+		"jest": "^29.7.0",
 		"postcss": "^8.4.31",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
@@ -63,11 +69,11 @@
 		"svelte-check": "^3.5.2",
 		"svelte-virtual-scroll-list": "^1.3.0",
 		"svgo": "^3.0.2",
+		"ts-jest": "^29.1.1",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
-		"vite": "^4.5.0",
-		"vitest": "^0.34.6"
+		"vite": "^4.5.0"
 	},
 	"type": "module"
 }
