--- a/src/lib/packages/calendar/core/package.json
+++ b/src/lib/packages/calendar/core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@cluue/calendar-core",
-	"version": "1.0.13",
+	"version": "1.0.14",
 	"private": false,
 	"license": "MIT",
 	"main": "src/index.js",
@@ -18,5 +18,12 @@
 	},
 	"devDependencies": {
 		"@types/lodash.clonedeep": "^4.5.9"
+	},
+	"exports": {
+		".": {
+			"import": "./src/index.js",
+			"svelte": "./src/index.js",
+			"types": "./src/index.d.ts"
+		}
 	}
 }
