--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"prepublish": "npx changeset && npx changeset version && npm run build",
 		"publish": "npm run prepublish && pnpm run -r --filter @cluue/mono publish",
 		"package": "svelte-kit sync && svelte-package",
+		"test": "vitest",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
@@ -59,7 +60,6 @@
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-svelte": "^2.34.0",
 		"glob": "^10.3.10",
-		"jest": "^29.7.0",
 		"postcss": "^8.4.31",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
@@ -69,11 +69,11 @@
 		"svelte-check": "^3.5.2",
 		"svelte-virtual-scroll-list": "^1.3.0",
 		"svgo": "^3.0.2",
-		"ts-jest": "^29.1.1",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
-		"vite": "^4.5.0"
+		"vite": "^4.5.0",
+		"vitest": "^0.34.0"
 	},
 	"type": "module"
 }
