--- a/src/lib/packages/calendar/core/package.json
+++ b/src/lib/packages/calendar/core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@cluue/calendar-core",
-	"version": "1.0.18",
+	"version": "1.0.19",
 	"private": false,
 	"license": "MIT",
 	"main": "src/index.js",
@@ -9,7 +9,7 @@
 	"type": "module",
 	"author": "Nikita Fedorov",
 	"scripts": {
-		"test": "jest"
+		"test": "vitest"
 	},
 	"dependencies": {
 		"dayjs": "^1.11.10",
