--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
 		"skipDefaultLibCheck": true,
 		"declaration": true,
 		"sourceMap": true,
-		"strict": true
-	}
+		"strict": true,
+		"moduleResolution": "NodeNext"
+	},
+	"exclude": ["**/*.test.*"]
 }
