--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,66 +3,12 @@
 		"PublicApiFile": ["export {", "\tMain as <FTName>,", "} from './ui'"],
 		"PublicApiUIFile": ["import Main from './Main/index.svelte'", "\t", "export {", "\tMain,", "}"],
 		"TSConfig": ["{", "\t\"extends\": \"../../../../tsconfig.json\"", "}"],
-		"MainSvelteFile": [
-			"<script lang='ts'>",
-			"\tinterface $$Props {",
-			"\t\tclass?:string",
-			"\t}",
-			"\t",
-			"\tlet className = ''",
-			"\texport { className as class }",
-			"\t",
-			"</script>",
-			"",
-			"<div class={`<FTName> ${className}`}>",
-			"</div>",
-			"",
-			"<style lang='sass'>",
-			"\t.<FTName>",
-			"</style>"
-		],
-		"PackageInfo": [
-			"{",
-			"\t\"name\": \"@cluue/<FTName | lowercase>\",",
-			"\t\"version\": \"1.0.0\",",
-			"\t\"private\": false,",
-			"\t\"license\": \"MIT\",",
-			"\t\"main\": \"src/index.js\",",
-			"\t\"svelte\": \"src/index.js\",",
-			"\t\"types\": \"src/index.d.ts\",",
-			"\t\"type\": \"module\",",
-			"\t\"author\": \"Nikita Fedorov\"",
-			"}"
-		],
+		"MainSvelteFile": ["<script lang='ts'>", "\tinterface $$Props {", "\t\tclass?:string", "\t}", "\t", "\tlet className = ''", "\texport { className as class }", "\t", "</script>", "", "<div class={`<FTName> ${className}`}>", "</div>", "", "<style lang='sass'>", "\t.<FTName>", "</style>"],
+		"PackageInfo": ["{", "\t\"name\": \"@cluue/<FTName | lowercase>\",", "\t\"version\": \"1.0.0\",", "\t\"private\": false,", "\t\"license\": \"MIT\",", "\t\"main\": \"src/index.js\",", "\t\"svelte\": \"src/index.js\",", "\t\"types\": \"src/index.d.ts\",", "\t\"type\": \"module\",", "\t\"author\": \"Nikita Fedorov\"", "}"],
 		"PackageReadme": "# <FTName>",
 		"PackagePublicApi": "// export * from './<FTName | pascalcase>/index.js'",
-		"PackageModule": [
-			"<script lang='ts'>",
-			"\timport {generateClassNames} from '@cluue/utils'",
-			"",
-			"\tinterface $$Props {",
-			"\t\tclass?:string",
-			"\t}",
-			"\t",
-			"\tlet className = ''",
-			"\texport { className as class }",
-			"\t",
-			"</script>",
-			"",
-			"<div class={generateClassNames(['<FTName | pascalcase>', className])}>",
-			"</div>",
-			"",
-			"<style lang='sass'>",
-			"\t.Clue<FTName | pascalcase>",
-			"</style>"
-		],
-		"PackageModulePublicApi": [
-			"import <FTName | pascalcase> from './<FTName | pascalcase>.svelte'",
-			"",
-			"export {",
-			"\t<FTName | pascalcase>",
-			"}"
-		]
+		"PackageModule": ["<script lang='ts'>", "\timport {generateClassNames} from '@cluue/utils'", "", "\tinterface $$Props {", "\t\tclass?:string", "\t}", "\t", "\tlet className = ''", "\texport { className as class }", "\t", "</script>", "", "<div class={generateClassNames(['<FTName | pascalcase>', className])}>", "</div>", "", "<style lang='sass'>", "\t.Clue<FTName | pascalcase>", "</style>"],
+		"PackageModulePublicApi": ["import <FTName | pascalcase> from './<FTName | pascalcase>.svelte'", "", "export {", "\t<FTName | pascalcase>", "}"]
 	},
 	"folderTemplates.structures": [
 		{
