--- a/.prettierrc
+++ b/.prettierrc
@@ -2,9 +2,9 @@
 	"useTabs": true,
 	"singleQuote": true,
 	"trailingComma": "none",
-	"printWidth": 100,
+	"printWidth": 600,
 	"semi": false,
 	"plugins": ["prettier-plugin-svelte"],
-	"pluginSearchDirs": ["."],
+	"pluginSearchDirs": false,
 	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
