--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"build:icons": "ts-node --esm scripts/beforeBuildAndDev/createIcons.ts",
-		"build:styles": "node scripts/afterBuild/buildStyles.mjs",
-		"build:packageTemplates": "node scripts/afterBuild/packageTemplates.mjs",
+		"build:icons": "ts-node --experimental-specifier-resolution=node --esm ./scripts/beforeBuildAndDev/createIcons.ts",
+		"build:styles": "node ./scripts/afterBuild/buildStyles.mjs",
+		"build:packageTemplates": "node ./scripts/afterBuild/packageTemplates.mjs",
 		"build:before": "npm run lint && npm run test && npm run build:icons",
 		"build:after": "npm run build:styles && npm run build:packageTemplates",
 		"build": "npm run build:before && npm run package && npm run build:after",
