--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 	"extends": "./.svelte-kit/tsconfig.json",
 	"ts-node": {
 		"compilerOptions": {
+			"esModuleInterop": true,
 			"allowImportingTsExtensions": true,
 			"moduleResolution": "Node"
 		}
