--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"build:icons": "ts-node --experimental-specifier-resolution=node --esm ./scripts/beforeBuildAndDev/createIcons.ts",
+		"build:icons": "ts-node --esm ./scripts/beforeBuildAndDev/icons.mjs",
 		"build:styles": "node ./scripts/afterBuild/buildStyles.mjs",
 		"build:packageTemplates": "node ./scripts/afterBuild/packageTemplates.mjs",
 		"build:before": "npm run lint && npm run test && npm run build:icons",
