--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
 	"extends": "./.svelte-kit/tsconfig.json",
+	"ts-node": {
+		"compilerOptions": {
+			"allowImportingTsExtensions": true,
+			"moduleResolution": "node"
+		}	
+	},
 	"compilerOptions": {
 		"allowJs": true,
 		"checkJs": true,
