--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"scripts": {
 		"dev": "vite dev",
 		"preview": "vite preview",
-		"prepublish": "npx changeset && npx changeset version && npm run build",
-		"publish": "npm run prepublish && pnpm run -r --filter @cluue/mono publish",
+		"prepublish": "npx changeset && npx changeset version && pnpm run build",
+		"publish": "pnpm run prepublish && pnpm run -r --filter @cluue/mono publish",
 		"package": "svelte-kit sync && svelte-package",
 		"test": "vitest run --",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
