--- a/src/lib/packages/calendar/ui/package.json
+++ b/src/lib/packages/calendar/ui/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"dayjs": "^1.11.10",
 		"@cluue/icons": "workspace:*",
+		"@cluue/config": "workspace:*",
 		"@cluue/popover": "workspace:*",
 		"@cluue/forms": "workspace:*",
 		"@cluue/calendar-core": "workspace:*"
